# bdk-dev-wallet

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: parse_psbt.rs
src-tauri/src/: lib.rs  main.rs  wallet.rs
src/components/: Config.tsx  Dashboard.tsx  Onboarding.tsx  Safety.tsx
