[package]
name = "dev-wallet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bdk_wallet = { version = "1.0.0-beta.6", features = ["bdk_file_store", "bip39", "file_store", "keys-bip39"] }
bdk_esplora = { version = "0.20.0", features = ["blocking"] }
bdk_file_store = "0.18.1"
bip39 = { version = "2.1.0", features = ["rand"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.102"
rand = "0.8"
ureq = { version = "2.10", features = ["json"] }
bitcoin = "0.32.8"

